plugins {
    id 'java'
}

repositories {
    mavenCentral()
    maven {
        name = "GitHubPackages"
        url = uri("https://maven.pkg.github.com/sofiasdz/TpIngSis")
        credentials {
            username = project.findProperty("gpr.user") ?: "sofiasdz"
            password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")

        }
    }
}

dependencies {
    implementation 'TpIngSis:parser:1.4-SNAPSHOT'
    testImplementation 'junit:junit:4.13'
}

test {
    useJUnit()
}
sourceCompatibility = 14

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}